syntax = "proto3";

package gantrycd.resource_v1;

option go_package = "github.com/gantrycd/backend/api/proto/pb/k8s-controller/v1";

service ResourceWatcher {
    rpc GetResource(GetResourceRequest) returns (GetResourceReply);
};

message GetResourceRequest {
    string organization = 1;
    string repository = 2;
};

message Usage {
    string container_name = 1;
    int64 cpu = 2;
    int64 mem = 3;
    int64 storage =4;
};

message Resource {
    string app_name = 1;
    string pod_name = 2;
    repeated Usage usages = 3;
};

message GetResourceReply {
    repeated Resource resources = 1;
    bool is_disable = 2;
};